# OOP---Assignment-2

./: README.md
Task 1/: A2-S23-20220309-problem02.cpp  A2-S23-20220309-problem05.cpp  A2-s23-20220309-problem08.cpp  A2-s23-20220309-problem11.cpp  A2_S23_20220013_Problem01.cpp  A2_S23_20220013_Problem04.cpp  A2_S23_20220013_Problem07.cpp  A2_S23_20220013_problem10.cpp  A2_S23_20220309_problem02.cpp  A2_S23_20220309_problem05.cpp  A2_S23_20220416_Problem03.cpp  A2_S23_20220416_Problem06.cpp  A2_S23_20220416_Problem09.cpp  A2_S23_20220416_Problem12.cpp  A2_s23_20220309_problem08.cpp  A2_s23_20220309_problem11.cpp  email.txt  input.txt  list.txt  output.txt  problem12.cpp  problem3.cpp  problem6.cpp  problem9.cpp
Task 2/: A2_Task2_s23_20220309_20220013_20220416.cpp.cpp  BigReal.cpp  BigReal.h  CMakeLists.txt  main.cpp
Task 3/: CMakeLists.txt  Instructions.cpp  Instructions.h  Machine.cpp  Machine.h  Memory.cpp  Memory.h  Registers.cpp  Registers.h  Rigesters.cpp  input.txt  main.cpp
build-Task-3-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-test_qt-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-test_qt-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
test_qt/: CMakeLists.txt  instructions.cpp  instructions.h  machine.cpp  machine.h  main.cpp  memory.cpp  memory.h  no.txt  registers.cpp  registers.h  volemachine.cpp  volemachine.h  volemachine.ui
(+76 files in other folders)
